# SRL-reasoning

./: .gitignore  =0.9.0  CHANGES_OUTLINE.md  COLAB_BENCHMARK_CELLS.md  COLAB_SETUP_OPTIMIZED.md  COLAB_SFT_BENCHMARK.md  COLAB_TEST_CELLS.md  README.md  colab_checkpoint_test_real.ipynb  colab_checkpoint_test_sft.ipynb  colab_srl_training.ipynb  colab_srl_training_drive.ipynb  pyproject.toml  setup.py
benchmarks/: __init__.py  colab_benchmark.ipynb  colab_prompt_preview.ipynb  data_loader.py  evaluator.py  results.py  run_benchmarks.py
plots/: __init__.py  colab_plot_benchmarks.ipynb  plot_benchmarks.py
scripts/: README.md  build_srl_data.py  check_tokenizer_files.py  create_splits.py  train_sft.py  train_srl.py  verify_training.py
src/: __init__.py  test.ipynb
src/sft/: __init__.py  dataset.py
src/shared/: __init__.py  build_srl_data.py  generation.py  prompts.py  splits.py  test.ipynb
src/srl/: __init__.py  rewards.py
srl_lib/: __init__.py  formatting.py  generation.py  grpo_utils.py  prompts.py  rewards.py
srl_lib/data/: __init__.py  build_srl_data.py  builder.py  dataset.py  splits.py
tests/: test_srl.py
