[project]
name = "srl-reasoning"
version = "0.1.0"
description = "Supervised Reinforcement Learning: From Expert Trajectories to Step-wise Reasoning"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "transformers",
    "accelerate",
    "vllm",
    "trl>=0.9.0",
    "datasets>=2.14.0",
    "pandas",
    "tqdm>=4.65.0",
]

[project.scripts]
srl-build-data = "srl_lib.data.build_srl_data:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["srl_lib", "benchmarks"]
